[package]
name = "pika-autosleep"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.15", features = ["derive"] }
crossbeam-channel = "0.5.13"
log = "0.4.22"
windows-service = "0.7.0"

[dependencies.env_logger]
version = "0.11.3"
default-features = false
features = ["auto-color", "humantime"]

[dependencies.windows]
version = "0.58.0"
features = ["Win32_System_Power"]
